[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[tool.black]
line-length = 79
target-version = ['py37']

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
line-length = 79
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "Q", # flake8-quotes
  "PLE", # pylint error
  "PLR", # pylint refactor
  "PLW", # pylint warning
  "UP", # pyupgrade
]

exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".env",
  ".venv",
  "**migrations/**",
  "venv",
]

ignore = [
  "B006",  # Do not use mutable data structures for argument defaults
  "PLR0913",  # Too many arguments to function call,
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
  "F401"  # unused-import
]
"src/django_nh3/forms.py" = [
  "UP035",  # import-replacements - breaks type hint Callable
]

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
namespace_packages = false
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
ignore_directives = [
  "automodule",
]
report_level = "ERROR"
