[metadata]
name = django_nh3
version = 0.0.2
description = Django integration with for nh3, Python binding to Ammonia HTML sanitizer Rust crate.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/marksweb/django-nh3
author = Mark Walker
author_email = theshow@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords = Django
project_urls =
    Changelog = https://github.com/marksweb/django-nf3/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@markwalker
    Twitter = https://twitter.com/markwalker_

[options]
packages = find:
install_requires =
    Django>=3.2
    nh3
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    django_nf3
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True
